--- a/cabinet.html
+++ b/cabinet.html
@@ -9,56 +9,55 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="image/logo.ico">
-
+<link href="style.css" rel="stylesheet">
 <title>GetPetBack</title>
 </head>
 <body>
   <!-- Navigation -->
-    <header class="navbar navbar-expand-lg p-3" style="background-color: black;">
-        <div class="container-fluid"> 
-          <a href="index.html"><img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo"></a>
-        <button class="navbar-toggler collapsed" style="background-color: rgb(100, 182, 100);" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>    
+  <header class="navbar navbar-expand-lg p-3">
+    <div class="container-fluid"> 
+      <a href="index.html"><img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo"></a>
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>    
 
-        <div class="navbar-collapse collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="index.html" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
-            <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
-            <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
-            <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
-          </ul>
-    
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input type="search" class="form-control form-control-dark" list="pets" placeholder="Поиск..." aria-label="Search">
-              <datalist id="pets">
-                <option value="Кошка">
-                </option><option value="Собака">
-                </option><option value="Корова">
-                </option><option value="Хомяк">
-                </option><option value="Птица">
-              </option></datalist>
-            </form>
-    
-          <div class="text-end d-flex">
-            <a href="login.html"><button type="button" class="btn btn-outline-light me-2" style="border-color: rgb(100, 182, 100) !important;">Вход</button></a>
-            <a href="registration.html"><button type="button" class="btn" style="background-color: rgb(100, 182, 100) !important; color: black !important;">Регистрация</button></a>
-          </div>
+    <div class="navbar-collapse collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="index.html" class="nav-link px-2 text-secondary">Главная</a></li>
+        <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
+        <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
+        <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
+      </ul>
+
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+        <input type="search" class="form-control form-control-dark" list="pets" placeholder="Поиск..." aria-label="Search">
+          <datalist id="pets">
+            <option value="Кошка">
+            </option><option value="Собака">
+            </option><option value="Корова">
+            </option><option value="Хомяк">
+            </option><option value="Птица">
+          </option></datalist>
+        </form>
+
+      <div class="text-end d-flex">
+        <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Вход</button></a>
+        <a href="registration.html"><button type="button" class="btn bbtn">Регистрация</button></a>
       </div>
-    </div>
   </div>
+</div>
 </header>
 
-<main style="min-height: 70vh; background-color: black;">
+<main class="bg-black" style="min-height: 70vh;">
         <div class="container-fluid">
           <div class="container-fluid">
             <div class="container-fluid">
-              <div class="card" style="background-color: black;">
-                <div class="rounded-top text-white d-flex flex-row" style="background-color: black; height:200px;">
+              <div class="card bg-black">
+                <div class="rounded-top text-white bg-black d-flex flex-row" style="height:200px;">
                   <div class="ms-4 mt-2 d-flex flex-column">
                     <img src="image/avatar.jpg"
-                      alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2"
-                      style="width: 150px; background-color: rgb(100, 182, 100); border: none; z-index: 1">
+                      alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2 bbtn"
+                      style="width: 150px; border: none; z-index: 1">
                     <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"
                       style="color: white; z-index: 1;">
                       Редактировать
@@ -71,19 +70,19 @@
                     <p>minecrafter228@gmail.com</p>
                   </div>
                 </div>
-                <div class="p-4" style="background-color: rgb(0, 0, 0); color: white;">
+                <div class="p-4 card-text">
                   <div class="d-flex justify-content-end text-center py-1">
                     <div>
                       <p class="mb-1 h5">121 раз</p>
-                      <p class="small mb-0" style="color: white;">Отозвался</p>
+                      <p class="small mb-0 card-text">Отозвался</p>
                     </div>
                     <div class="px-3">
                       <p class="mb-1 h5">1 раз</p>
-                      <p class="small mb-0" style="color: white;">Терял питомца</p>
+                      <p class="small mb-0 card-text">Терял питомца</p>
                     </div>
                   </div>
                 </div>
-                <div class="card-body p-4 bg-dark" style="color: white;">
+                <div class="card-body p-4 bg-dark card-text">
                   <div class="">
                     <p class="lead fw-normal mb-1">Обо мне</p>
                     <div class="p-4">
@@ -100,13 +99,13 @@
                     <div class="col">
                         <div class="card shadow-sm" style="border: none;">
                           <img class="bd-placeholder-img card-img-top" src="image/9.jpg" style="width: 63%;"/>
-                          <div class="card-body" style="background-color: black">
-                            <p class="card-text" style="color: white;">Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p>
-                            <p class="card-text" style="color: white;">Адрес: ул. Зимняя 73, <br>Кировский район</p>
-                            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
+                          <div class="card-body">
+                            <p class="card-text">Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p>
+                            <p class="card-text">Адрес: ул. Зимняя 73, <br>Кировский район</p>
+                            <p class="card-text">Дата: 20.01.2023</p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                                <button type="button" class="btn btn-sm btn-outline-light">Подробнее</button>
                               </div>
                             </div>
                           </div>
@@ -115,13 +114,13 @@
                       <div class="col">
                         <div class="card shadow-sm" style="border: none;">
                           <img class="bd-placeholder-img card-img-top" src="image/6.jpg"/>
-                          <div class="card-body" style="background-color: black">
-                            <p class="card-text" style="color: white;">Пропала собака! Коричневая шерсть, карие глаза, очень игривая и радостная.</p>
-                            <p class="card-text" style="color: white;">Адрес: ул. Мира 3, <br>Адмиралтейский район</p>
-                            <p class="card-text" style="color: white;">Дата: 05.03.2023</p>
+                          <div class="card-body">
+                            <p class="card-text">Пропала собака! Коричневая шерсть, карие глаза, очень игривая и радостная.</p>
+                            <p class="card-text">Адрес: ул. Мира 3, <br>Адмиралтейский район</p>
+                            <p class="card-text">Дата: 05.03.2023</p>
                             <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button>
+                                <button type="button" class="btn btn-sm btn-outline-light">Подробнее</button>
                               </div>
                             </div>
                           </div>
@@ -136,12 +135,12 @@
 
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
-              <div class="modal-content" style="background-color: black; color: white;">
+              <div class="modal-content bg-black card-text">
                 <div class="modal-header">
                   <h1 class="modal-title fs-5" id="staticBackdropLabel">Редактирование профиля</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
                 </div>
-                <div class="modal-body" style="background-color: black; color: black;">
+                <div class="modal-body text-black">
                     <form class="">
                         <div class="form-floating mb-3">
                             <input type="text" class="form-control rounded-3" id="floatingInput" placeholder="Алексей">
@@ -163,58 +162,58 @@
                             <input type="text" class="form-control rounded-3" id="floatingInput" placeholder="Москва">
                             <label for="floatingInput">Город</label>
                           </div>
-                        <div class="mb-3" style="color: white;">
+                        <div class="mb-3 card-text">
                             <label for="message-text" class="col-form-label">Обо мне:</label>
                             <textarea class="form-control" id="message-text"></textarea>
                           </div>
-                        <hr class="my-4" style="color: white;">
+                        <hr class="my-4 card-text">
                       </form>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                  <button type="submit" class="btn btn-primary" style="background-color: rgb(100, 182, 100); border: none;">Редактировать</button>
+                  <button type="submit" class="btn bbtn">Редактировать</button>
                 </div>
               </div>
             </div>
           </div>
 
-<div class="container" style="background-color: black; color: white;">
-    <footer class="py-5">
-      <div class="row">
-        <div class="col-6 col-md-2 mb-3">
-          <h5>GetPetBack</h5>
-          <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Главная</a></li>
-            <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
-            <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
-            <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Личный кабинет</a></li>
-            <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Регистрация</a></li>
-          </ul>
-        </div>
-  
-        <div class="col-md-8 offset-md-1 mb-3">
-          <form>
-            <h5>Подпишитесь на наши новости</h5>
-            <p>Делайте добро, воссоединяйте животных и их хозяев вместе с нами.</p>
-            <div class="d-flex flex-column flex-sm-row w-100 gap-2 mb-2">
-              <label for="newsletter1" class="visually-hidden">Адрес эл. почты</label>
-              <input id="newsletter1" type="text" class="form-control" placeholder="Адрес эл. почты">
-              <button class="btn btn-primary" type="button" style="background-color: rgb(100, 182, 100) !important; border: none;">Подписаться</button>
-            </div>
-            <p>// Мы никому не разглашаем ваш адрес эл. почты</p>
-          </form>
-        </div>
-      </div>
-  
-      <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-        <p>© 2023 GetPetBack. Все права защищены.</p>
-        <ul class="list-unstyled d-flex" style="width: 22%;">
-          <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/twitter.png" width="50px"></a></li>
-          <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/facebook.png" width="50px"></a></li>
-          <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/instagram.png" width="50px"></a></li>
+<div class="container card-text">
+  <footer class="py-5">
+    <div class="row">
+      <div class="col-6 col-md-2 mb-3">
+        <h5>GetPetBack</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 card-text">Главная</a></li>
+          <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 card-text">Поиск по объявлениям</a></li>
+          <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 card-text">Добавить объявление</a></li>
+          <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 card-text">Личный кабинет</a></li>
+          <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 card-text">Регистрация</a></li>
         </ul>
       </div>
-    </footer>
+
+      <div class="col-md-8 offset-md-1 mb-3">
+        <form>
+          <h5>Подпишитесь на наши новости</h5>
+          <p>Делайте добро, воссоединяйте животных и их хозяев вместе с нами.</p>
+          <div class="d-flex flex-column flex-sm-row w-100 gap-2 mb-2">
+            <label for="newsletter1" class="visually-hidden">Адрес эл. почты</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Адрес эл. почты">
+            <button class="btn bbtn" type="button">Подписаться</button>
+          </div>
+          <p>// Мы никому не разглашаем ваш адрес эл. почты</p>
+        </form>
+      </div>
+    </div>
+
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <p>© 2023 GetPetBack. Все права защищены.</p>
+      <ul class="list-unstyled d-flex" style="width: 22%;">
+        <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/twitter.png" width="50px"></a></li>
+        <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/facebook.png" width="50px"></a></li>
+        <li style="padding: 1em;"><a class="link-body-emphasis" href="#"><img src="image/instagram.png" width="50px"></a></li>
+      </ul>
+    </div>
+  </footer>
 </div>
 </main>
 
