--- a/card5.html
+++ b/card5.html
@@ -9,47 +9,46 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="image/logo.ico">
-
+<link href="style.css" rel="stylesheet">
 <title>GetPetBack</title>
 </head>
 <body>
   <!-- Navigation -->
-    <header class="navbar navbar-expand-lg p-3" style="background-color: black;">
-        <div class="container-fluid"> 
-          <a href="index.html"><img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo"></a>
-        <button class="navbar-toggler collapsed" style="background-color: rgb(100, 182, 100);" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>    
+  <header class="navbar navbar-expand-lg p-3">
+    <div class="container-fluid"> 
+      <a href="index.html"><img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo"></a>
+    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>    
 
-        <div class="navbar-collapse collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="index.html" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
-            <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
-            <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
-            <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
-          </ul>
-    
-          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-            <input type="search" class="form-control form-control-dark" list="pets" placeholder="Поиск..." aria-label="Search">
-              <datalist id="pets">
-                <option value="Кошка">
-                </option><option value="Собака">
-                </option><option value="Корова">
-                </option><option value="Хомяк">
-                </option><option value="Птица">
-              </option></datalist>
-            </form>
-    
-          <div class="text-end d-flex">
-            <a href="login.html"><button type="button" class="btn btn-outline-light me-2" style="border-color: rgb(100, 182, 100) !important;">Вход</button></a>
-            <a href="registration.html"><button type="button" class="btn" style="background-color: rgb(100, 182, 100) !important; color: black !important;">Регистрация</button></a>
-          </div>
+    <div class="navbar-collapse collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="index.html" class="nav-link px-2 text-secondary">Главная</a></li>
+        <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
+        <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
+        <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
+      </ul>
+
+      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+        <input type="search" class="form-control form-control-dark" list="pets" placeholder="Поиск..." aria-label="Search">
+          <datalist id="pets">
+            <option value="Кошка">
+            </option><option value="Собака">
+            </option><option value="Корова">
+            </option><option value="Хомяк">
+            </option><option value="Птица">
+          </option></datalist>
+        </form>
+
+      <div class="text-end d-flex">
+        <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Вход</button></a>
+        <a href="registration.html"><button type="button" class="btn bbtn">Регистрация</button></a>
       </div>
-    </div>
   </div>
+</div>
 </header>
 
-<main style="min-height: 70vh; background-color: black;">
+<main class="bg-black" style="min-height: 70vh;">
   <div class="container-fluid py-5">
     <div class="row d-flex justify-content-center align-items-center">
               <div class="card py-4 bg-dark" style="border-radius: 15px;">
@@ -67,8 +66,8 @@
                         <p>Дата: 20.01.2023</p>
                       </div>
                       <div class="d-flex pt-1" style="width: 50%;">
-                        <button type="button" class="btn btn-outline-primary me-1 flex-grow-1" style="border-color: rgb(100, 182, 100) !important; color: rgb(100, 182, 100);">Чат с хозяином</button>
-                        <button type="button" class="btn btn-primary flex-grow-1" style="background-color: rgb(100, 182, 100) !important; border: none;">Откликнуться</button>
+                        <button type="button" class="btn btn-outline-light me-1 flex-grow-1">Чат с хозяином</button>
+                        <button type="button" class="btn bbtn flex-grow-1">Откликнуться</button>
                       </div>
                     </div>
                   </div>
@@ -76,17 +75,17 @@
               </div>
     </div>
   </div>
-<div class="container" style="background-color: black; color: white;">
+  <div class="container card-text">
     <footer class="py-5">
       <div class="row">
         <div class="col-6 col-md-2 mb-3">
           <h5>GetPetBack</h5>
           <ul class="nav flex-column">
-            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Главная</a></li>
-            <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
-            <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
-            <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Личный кабинет</a></li>
-            <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Регистрация</a></li>
+            <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 card-text">Главная</a></li>
+            <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 card-text">Поиск по объявлениям</a></li>
+            <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 card-text">Добавить объявление</a></li>
+            <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 card-text">Личный кабинет</a></li>
+            <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 card-text">Регистрация</a></li>
           </ul>
         </div>
   
@@ -97,7 +96,7 @@
             <div class="d-flex flex-column flex-sm-row w-100 gap-2 mb-2">
               <label for="newsletter1" class="visually-hidden">Адрес эл. почты</label>
               <input id="newsletter1" type="text" class="form-control" placeholder="Адрес эл. почты">
-              <button class="btn btn-primary" type="button" style="background-color: rgb(100, 182, 100) !important; border: none;">Подписаться</button>
+              <button class="btn bbtn" type="button">Подписаться</button>
             </div>
             <p>// Мы никому не разглашаем ваш адрес эл. почты</p>
           </form>
@@ -120,3 +119,4 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
+  
