--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="icon" type="image/x-icon" href="image/logo.ico">
-
+<link href="style.css" rel="stylesheet">
 <title>GetPetBack</title>
 </head>
 <body>
   <!-- Navigation -->
-    <header class="navbar navbar-expand-lg p-3" style="background-color: black;">
+    <header class="navbar navbar-expand-lg p-3">
         <div class="container-fluid"> 
           <a href="index.html"><img class="navbar-brand" src="image/logo.png" style="width: 3rem; margin-right: 2em;" alt="logo"></a>
-        <button class="navbar-toggler collapsed" style="background-color: rgb(100, 182, 100);" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>    
 
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
           <ul class="navbar-nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="index.html" class="nav-link px-2 text-secondary" style="color: rgb(100, 182, 100) !important;">Главная</a></li>
+            <li><a href="index.html" class="nav-link px-2 text-secondary">Главная</a></li>
             <li><a href="cabinet.html" class="nav-link px-2 text-white">Личный кабинет</a></li>
             <li><a href="search.html" class="nav-link px-2 text-white">Поиск по объявлениям</a></li>
             <li><a href="add.html" class="nav-link px-2 text-white">Добавить объявление</a></li>
@@ -41,15 +41,14 @@
             </form>
     
           <div class="text-end d-flex">
-            <a href="login.html"><button type="button" class="btn btn-outline-light me-2" style="border-color: rgb(100, 182, 100) !important;">Вход</button></a>
-            <a href="registration.html"><button type="button" class="btn" style="background-color: rgb(100, 182, 100) !important; color: black !important;">Регистрация</button></a>
+            <a href="login.html"><button type="button" class="btn btn-outline-light me-2">Вход</button></a>
+            <a href="registration.html"><button type="button" class="btn bbtn">Регистрация</button></a>
           </div>
       </div>
     </div>
-  </div>
 </header>
 <!-- MainPage -->
-<main style="min-height: 70vh; background-color: black;">
+<main class="bg-black" style="min-height: 70vh;">
   <h2 class="text-center text-white bg-dark mb-md-0" style="padding: 1em;">Найденные животные</h2>
   <div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
@@ -59,21 +58,21 @@
     </div>
     <div class="carousel-inner bg-dark p-3">
       <div class="carousel-item active">
-        <img src="image/1.jpg" class="d-block w-75 m-auto" alt="...">
+        <img src="image/1.jpg" class="d-flex w-75 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
           <h2>Кошка</h2>
           <p>Серебристая шерстка, желтые глаза, спокойная. Найдена рядом с метро Приморская.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="image/2.jpg" class="d-block w-75 m-auto" alt="...">
+        <img src="image/2.jpg" class="d-flex w-75 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
           <h2>Овечка</h2>
           <p>Маленькая овечка, боязливая, на левом ухе темная шерсть, найдена на Звездной.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="image/3.jpg" class="d-block w-75 m-auto" alt="...">
+        <img src="image/3.jpg" class="d-flex w-75 m-auto" alt="...">
         <div class="carousel-caption d-none d-md-block" style="background-color: rgba(0, 0, 0, 0.5);">
           <h2>Кролик</h2>
           <p>Белый кролик с коричневыми пятнами, хромает на левую заднюю лапку, найден во дворе ул. Ленина 28</p>
@@ -97,14 +96,14 @@
       <div class="col">
         <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/4.jpg"/>
-          <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">Пропал котенок! Белая шерсть, голубые глаза, очень игривый.</p>
-            <p class="card-text" style="color: white;">Адрес: ул. Кораблестроителей 183, Василеостровский район</p>
-            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
+          <div class="card-body">
+            <p class="card-text">Пропал котенок! Белая шерсть, голубые глаза, очень игривый.</p>
+            <p class="card-text">Адрес: ул. Кораблестроителей 183, Василеостровский район</p>
+            <p class="card-text">Дата: 20.01.2023</p>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <a href="card1.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <a href="card1.html"><button type="button" class="btn btn-sm btn-outline-light">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-light">Откликнуться</button>
               </div>
               <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">Сейчас</small>
             </div>
@@ -114,14 +113,14 @@
       <div class="col">
         <div class="card shadow-sm d-flex">
          <img class="bd-placeholder-img card-img-top" src="image/5.jpg"/>
-          <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">Пропала кошка! Серая шерсть, голубые глаза, спокойная и доверчивая.</p>
-            <p class="card-text" style="color: white;">Адрес: ул. Сталина 13, <br>Приморский район</p>
-            <p class="card-text" style="color: white;">Дата: 10.11.2023</p>
+          <div class="card-body">
+            <p class="card-text">Пропала кошка! Серая шерсть, голубые глаза, спокойная и доверчивая.</p>
+            <p class="card-text">Адрес: ул. Сталина 13, <br>Приморский район</p>
+            <p class="card-text">Дата: 10.11.2023</p>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <a href="card2.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <a href="card2.html"><button type="button" class="btn btn-sm btn-outline-light">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-light">Откликнуться</button>
               </div>
               <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">1 мин. назад</small>
             </div>
@@ -131,14 +130,14 @@
       <div class="col">
         <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/6.jpg"/>
-          <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">Пропала собака! Коричневая шерсть, карие глаза, очень игривая и радостная.</p>
-            <p class="card-text" style="color: white;">Адрес: ул. Мира 3, <br>Адмиралтейский район</p>
-            <p class="card-text" style="color: white;">Дата: 05.03.2023</p>
+          <div class="card-body">
+            <p class="card-text">Пропала собака! Коричневая шерсть, карие глаза, очень игривая и радостная.</p>
+            <p class="card-text">Адрес: ул. Мира 3, <br>Адмиралтейский район</p>
+            <p class="card-text">Дата: 05.03.2023</p>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <a href="card3.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <a href="card3.html"><button type="button" class="btn btn-sm btn-outline-light">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-light">Откликнуться</button>
               </div>
               <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">Сейчас</small>
             </div>
@@ -149,14 +148,14 @@
       <div class="col">
         <div class="card shadow-sm d-flex">
          <img class="bd-placeholder-img card-img-top" src="image/7.jpg"/>
-          <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">Пропала собака! Мопс! Серая шерсть, черные глаза, очень грустный :(</p>
-            <p class="card-text" style="color: white;">Адрес: ул. Травки 7, <br>Выборгский район</p>
-            <p class="card-text" style="color: white;">Дата: 23.06.2023</p>
+          <div class="card-body">
+            <p class="card-text">Пропала собака! Мопс! Серая шерсть, черные глаза, очень грустный :(</p>
+            <p class="card-text">Адрес: ул. Травки 7, <br>Выборгский район</p>
+            <p class="card-text">Дата: 23.06.2023</p>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <a href="card4.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <a href="card4.html"><button type="button" class="btn btn-sm btn-outline-light">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-light">Откликнуться</button>
               </div>
               <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">30 мин. назад</small>
             </div>
@@ -166,14 +165,14 @@
       <div class="col">
         <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/8.jpg" style="width: 100%; height: 330px;"/>
-          <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">Пропал хомяк! Белая шерсть, очень злобный, оторвал ноготь хозяину, осторожнее!</p>
-            <p class="card-text" style="color: white;">Адрес: ул. Сессии 12, <br>Василеостровский район</p>
-            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
+          <div class="card-body">
+            <p class="card-text">Пропал хомяк! Белая шерсть, очень злобный, оторвал ноготь хозяину, осторожнее!</p>
+            <p class="card-text">Адрес: ул. Сессии 12, <br>Василеостровский район</p>
+            <p class="card-text">Дата: 20.01.2023</p>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <a href="card5.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <a href="card5.html"><button type="button" class="btn btn-sm btn-outline-light">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-light">Откликнуться</button>
               </div>
               <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">7 мин. назад</small>
             </div>
@@ -183,14 +182,14 @@
       <div class="col">
         <div class="card shadow-sm d-flex">
           <img class="bd-placeholder-img card-img-top" src="image/9.jpg" style="width: 80%;"/>
-          <div class="card-body" style="background-color: black">
-            <p class="card-text" style="color: white;">Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p>
-            <p class="card-text" style="color: white;">Адрес: ул. Зимняя 73, <br>Кировский район</p>
-            <p class="card-text" style="color: white;">Дата: 20.01.2023</p>
+          <div class="card-body">
+            <p class="card-text">Пропала морская свинка! Коричневая шерсть, белая морда, очень тупая.</p>
+            <p class="card-text">Адрес: ул. Зимняя 73, <br>Кировский район</p>
+            <p class="card-text">Дата: 20.01.2023</p>
             <div class="d-flex justify-content-between align-items-center flex-wrap">
               <div class="btn-group">
-                <a href="card6.html"><button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Подробнее</button></a>
-                <button type="button" class="btn btn-sm btn-outline-secondary" style="color: white; border-color: rgb(100, 182, 100) !important;">Откликнуться</button>
+                <a href="card6.html"><button type="button" class="btn btn-sm btn-outline-light">Подробнее</button></a>
+                <button type="button" class="btn btn-sm btn-outline-light">Откликнуться</button>
               </div>
               <small class="text-body-secondary" style="color: white !important; padding-top: 1em;">3 мин. назад</small>
             </div>
@@ -201,17 +200,17 @@
   </div>
 </div>
 
-<div class="container" style="background-color: black; color: white;">
+<div class="container card-text">
   <footer class="py-5">
     <div class="row">
       <div class="col-6 col-md-2 mb-3">
         <h5>GetPetBack</h5>
         <ul class="nav flex-column">
-          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Главная</a></li>
-          <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Поиск по объявлениям</a></li>
-          <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Добавить объявление</a></li>
-          <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Личный кабинет</a></li>
-          <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 text-body-secondary" style="color: white !important;">Регистрация</a></li>
+          <li class="nav-item mb-2"><a href="index.html" class="nav-link p-0 card-text">Главная</a></li>
+          <li class="nav-item mb-2"><a href="search.html" class="nav-link p-0 card-text">Поиск по объявлениям</a></li>
+          <li class="nav-item mb-2"><a href="add.html" class="nav-link p-0 card-text">Добавить объявление</a></li>
+          <li class="nav-item mb-2"><a href="cabinet.html" class="nav-link p-0 card-text">Личный кабинет</a></li>
+          <li class="nav-item mb-2"><a href="registration.html" class="nav-link p-0 card-text">Регистрация</a></li>
         </ul>
       </div>
 
@@ -222,7 +221,7 @@
           <div class="d-flex flex-column flex-sm-row w-100 gap-2 mb-2">
             <label for="newsletter1" class="visually-hidden">Адрес эл. почты</label>
             <input id="newsletter1" type="text" class="form-control" placeholder="Адрес эл. почты">
-            <button class="btn btn-primary" type="button" style="background-color: rgb(100, 182, 100) !important; border: none;">Подписаться</button>
+            <button class="btn bbtn" type="button">Подписаться</button>
           </div>
           <p>// Мы никому не разглашаем ваш адрес эл. почты</p>
         </form>
